--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,22 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 body {
     font-size: 16px;
     font-family: "Poppins", serif;
+
+}
+
+.background-img {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 1000px;
+    height: auto; /* Maintain the aspect ratio */
+    z-index: -1; /* Ensure the image is behind other content */
+}
+
+.jez {
+    font-weight: 800;
+    color: #FB9333;
 }
 
 .orange-highlight {
@@ -48,22 +62,27 @@ body {
 .header-page {
     /* width: %; */
     display: flex;
+    margin-top: 70px;
 }
 
 .highlight {
     border-radius: 100px;
-    padding: 16px;
+    padding: 13px;
     background-color: #FFF0DC;
     color: #FB9333;
+    font-weight: 600;
 }
 
 h1 {
     font-size: 72px;
     font-weight: 700;
     color: #575757;
+    line-height: 1.22;
+    margin-bottom: 25px;
 }
 
 .header-page-text {
+    width: 600px;
     margin-left: 60px;
     p {
         font-size: 20px;
@@ -76,9 +95,12 @@ h1 {
         border-radius: 100px;
         background-color: #FB9333;
         color: #FFFFFF;
-        padding: 18px 32px 18px 32px;
+        padding: 16px 48px;
+        margin-top: 5px;
+        margin-bottom: 60px;
     }
     .main-statistics {
+        width: 380px;
         display: flex;
         justify-content: space-between;
         .statistics-entry {
@@ -157,7 +179,8 @@ h1 {
 
 .text{
     display: flex;
-    justify-content: space-between;
+    /* justify-content: space-between; */
+    flex-direction: row;
     p {
         font-size: 20px;
         color: #828282;
@@ -218,15 +241,286 @@ h2 {
     color: #575757;
     /* font-weight: 600; */
     text-decoration: none;
+    border-radius: 100px;
+    margin: 20px 50px;
+    padding: 13px;
 }
 
 .info-card a img {
     width: 14px;
     margin-left: 5px;
     color: #575757; 
-    /* todo : make black arrow */
 }
 
 .info-card a:hover {
+    color: #FFFFFF;
+    background-color: #FB9333;
+    transition: transform 0.7s ease;
+}
+
+.info-card a img:hover {
+    color: #FFFFFF;
+    transition: transform 0.7s ease;
+}
+
+
+/*  */
+/*  */
+/*  */
+/*  */
+/*  */
+
+
+.reviews {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+    margin-top: 40px;
+    background: linear-gradient(to bottom, #FFF6EA 0%, #FFE8C7 100%);
+}
+
+.reviews-text {
+    margin-left: 60px;
+}
+
+.bold-h2 {
+    font-size: 48px;
+    font-weight: 600;
+}
+
+.reviews-description {
+    color: #999999;
+    font-size: 16px;
+}
+.reviews-text span {
+    font-family: Raleway;
+    font-weight: 700;
+    font-size: 16px;
+    color: #CCCCCC;
+}
+.reviews-text span b {
+    color: #333333;
+    font-size: 48px;
+}
+.review-buttons {
+    display: flex;
+    gap: 20px;
+    margin-top: 20px;
+}
+
+.left-button {
+    border: none;
+    background-color: #FFC87A;
+    border-radius: 16px;
+}
+
+.right-button {
+    border: none;
+    background-color: #FB9333;
+    border-radius: 16px;
+}
+
+.review-buttons button img{
+    width: 24px;
+    color: #FFFFFF;
+    padding: 16px;
+}
+.client-cards {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+    margin-top: 40px;
+}
+
+.client-card {
+    background-color: #FFFFFF;
+}
+
+.client-card {
+    h4 {
+        font-size: 24px;
+        font-weight: 500;
+        color: #2B2B2B;
+    }
+    time {
+        font-size: 14px;
+        color: #999999;
+    }
+}
+
+/*  */
+/*  */
+/*  */
+/*  */
+/*  */
+
+.text {
+    margin-left: 60px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.text h5 {
+    font-size: 20px;
+    font-weight: 500;
     color: #FB9333;
+}
+
+.text h2 {
+    font-size: 48px;
+    font-weight: 600;
+    color: #585858;
+}
+
+.food-cards {
+    display: flex;
+    justify-content: space-between;
+    margin-left: 60px;
+}
+
+.food-card {
+    position: relative;
+    width: 300px; 
+    height: 300px;
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    padding: 20px;
+    color: white;
+    text-align: center;
+}
+
+.food-name {
+    color: #FFFFFF;
+    font-size: 24px;
+    font-weight: 500;
+}
+
+.food-price {
+    color: #FFFFFF;
+    font-size: 40px;
+    font-weight: 700;
+}
+
+
+/*  */
+/*  */
+/*  */
+/*  */
+/*  */
+
+.subscription {
+    margin: 0 60px;
+    position: relative;
+    background-image: url('icons/background_input.svg');
+    background-size: cover;
+    background-position: center;
+    padding: 60px 0;
+    color: white;
+    text-align: center;
+    background-color: #FFF1DE;
+}
+
+.subscription span {
+    color: #FB9333;
+    font-size: 20px;
+    font-weight: 500;
+}
+
+.subscription h2 {
+    font-weight: 600;
+    font-size: 48px;
+    color: #585858;
+}
+
+.subscription p {
+    font-weight: 500;
+    font-size: 16px;
+    color: #575757;
+}
+
+.subscription-box {
+    background-color: #FFFFFF;
+}
+
+
+/*  */
+/*  */
+/*  */
+/*  */
+/*  */
+
+footer {
+    margin: 0px 60px;
+    display: flex;
+    justify-content: space-between; 
+}
+footer .logo {
+    display: flex;
+    flex-direction: column;
+}
+
+.footer-logo {
+    font-size: 24px;
+    color: #585858;
+    font-weight: 600;
+}
+
+footer p {
+    font-size: 16px;
+    color: #575757;
+    width: 210px;
+    margin-bottom: 48px;
+}
+
+.copyright {
+    color: #2B2B2B;
+}
+
+.links {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.footer-bold {
+    font-weight: 600;
+    color: #FB9333;
+    font-size: 16px;
+}
+
+footer a {
+    all: unset;
+    font-size: 16px;
+}
+
+.get-in-touch {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+}
+
+.touch-entry {
+    display: flex;
+    gap: 16px;
+    align-items: flex-start;
+    /* justify-content: space-around; */
+}
+
+.touch-text {
+    width: 210px;
+}
+
+.social-links {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+
+.links-container {
+    display: flex;
+    gap: 28px;
 }
