--- a/styles.css
+++ b/styles.css
@@ -19,12 +19,10 @@ body {
     color: #FB9333;
 }
 
-.orange-highlight {
-    color: #FB9300;
-}
+
 
 .main-header {
-    margin-left: 60px;
+    margin: 30px 90px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -83,7 +81,7 @@ h1 {
 
 .header-page-text {
     width: 600px;
-    margin-left: 60px;
+    margin: 0 90px;
     p {
         font-size: 20px;
         color: #828282;
@@ -176,7 +174,9 @@ h1 {
 /* why us */
 /*  */
 
-
+.why-us-page {
+    margin: 0 90px;
+}
 .text{
     display: flex;
     /* justify-content: space-between; */
@@ -194,7 +194,7 @@ h2 {
 
 .info-cards {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     gap: 20px;
     margin-top: 40px;
 }
@@ -277,22 +277,33 @@ h2 {
     gap: 20px;
     margin-top: 40px;
     background: linear-gradient(to bottom, #FFF6EA 0%, #FFE8C7 100%);
+    /* padding: 90px; */
+    /* margin: 90px; */
+    /* margin-top: 90px; */
+    padding-top: 90px;
+    padding-bottom: 90px;
 }
 
 .reviews-text {
-    margin-left: 60px;
+    margin-left: 90px;
 }
 
-.bold-h2 {
+.reviews-text h2 {
     font-size: 48px;
     font-weight: 600;
+    color: #333333; 
+}
+
+.reviews-text {
+    width: 2200px;
 }
 
 .reviews-description {
+    margin-top: 0;
     color: #999999;
     font-size: 16px;
 }
-.reviews-text span {
+.reviews-text .num {
     font-family: Raleway;
     font-weight: 700;
     font-size: 16px;
@@ -301,11 +312,14 @@ h2 {
 .reviews-text span b {
     color: #333333;
     font-size: 48px;
+    font-weight: 600;
 }
+
 .review-buttons {
     display: flex;
     gap: 20px;
     margin-top: 20px;
+    margin-bottom: 10px;
 }
 
 .left-button {
@@ -334,10 +348,14 @@ h2 {
 
 .client-card {
     background-color: #FFFFFF;
+    border-radius: 8px;
 }
 
 .client-card {
+    padding: 0 27px;
+    overflow: visible;
     h4 {
+        margin-top: 100px;
         font-size: 24px;
         font-weight: 500;
         color: #2B2B2B;
@@ -347,6 +365,11 @@ h2 {
         color: #999999;
     }
 }
+.client-card img {
+    position: absolute;
+    margin-top: -40px;
+
+}
 
 /*  */
 /*  */
@@ -355,34 +378,42 @@ h2 {
 /*  */
 
 .text {
-    margin-left: 60px;
+    margin-left: 90px;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
+    margin-bottom: 20px;
+    /* margin-top: 0; */
 }
 
 .text h5 {
     font-size: 20px;
     font-weight: 500;
     color: #FB9333;
+    margin-bottom: 0;
+    /* text-align: center; */
 }
 
 .text h2 {
+    margin-top: 10px;
     font-size: 48px;
     font-weight: 600;
     color: #585858;
+    text-align: center;
+    line-height: 1.26;
 }
 
 .food-cards {
     display: flex;
     justify-content: space-between;
-    margin-left: 60px;
+    margin: 0 90px;
 }
 
 .food-card {
     position: relative;
-    width: 300px; 
-    height: 300px;
+    height: 450px;
+    width: 27%;
+    border-radius: 50px;
     background-size: cover;
     background-position: center;
     display: flex;
@@ -390,30 +421,35 @@ h2 {
     justify-content: flex-end;
     padding: 20px;
     color: white;
-    text-align: center;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.food-card:hover {
+    transform: translateY(-5px);
+    /* box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2); */
 }
 
 .food-name {
-    color: #FFFFFF;
     font-size: 24px;
     font-weight: 500;
+    /* margin-bottom: 20px; */
+    margin-left: 12px;
 }
 
 .food-price {
-    color: #FFFFFF;
     font-size: 40px;
     font-weight: 700;
+    margin-left: 12px;
+    margin-bottom: 8px;
 }
 
-
 /*  */
 /*  */
 /*  */
 /*  */
 /*  */
-
 .subscription {
-    margin: 0 60px;
+    margin: 100px 90px;
     position: relative;
     background-image: url('icons/background_input.svg');
     background-size: cover;
@@ -450,6 +486,8 @@ h2 {
     font-weight: 500;
     font-size: 16px;
     color: #575757;
+    margin-bottom: 70px;
+    opacity: 0.7;
 }
 
 .subscription-box {
@@ -458,16 +496,16 @@ h2 {
     padding: 10px;
     border-radius: 50px;
     margin: 0 200px;
+    margin-bottom: 23px;
 }
 
 .subscription-box input {
     all: unset;
-    /* background-color: #FFF1DE; */
     font-size: 16px;
     color: #575757;
     width: 100%;
     padding: 15px 30px;
-    text-align: left
+    text-align: left;
 }
 
 .subscription-box button {
@@ -478,7 +516,6 @@ h2 {
     border-radius: 50px;
     margin-left: 10px;
 }
-
 /*  */
 /*  */
 /*  */
@@ -486,7 +523,7 @@ h2 {
 /*  */
 
 footer {
-    margin: 0px 60px;
+    margin: 0px 90px;
     display: flex;
     justify-content: space-between; 
 }
@@ -555,4 +592,10 @@ footer a {
 .links-container {
     display: flex;
     gap: 28px;
+}
+
+
+.orange-highlight {
+    color: #FB9300;
+    /* font-size:1000px */
 }
