--- a/styles.css
+++ b/styles.css
@@ -291,11 +291,12 @@ h2 {
 .reviews-text h2 {
     font-size: 48px;
     font-weight: 600;
-    color: #333333; 
+    color: #333333;
+    line-height: 1.22;
 }
 
 .reviews-text {
-    width: 2200px;
+    width: 2500px;
 }
 
 .reviews-description {
@@ -339,11 +340,13 @@ h2 {
     color: #FFFFFF;
     padding: 16px;
 }
+
 .client-cards {
     display: flex;
     justify-content: space-between;
     gap: 20px;
-    margin-top: 40px;
+    margin-top: 80px;
+    overflow: hidden;
 }
 
 .client-card {
@@ -359,6 +362,7 @@ h2 {
         font-size: 24px;
         font-weight: 500;
         color: #2B2B2B;
+        margin-bottom: 7px;
     }
     time {
         font-size: 14px;
@@ -369,6 +373,10 @@ h2 {
     position: absolute;
     margin-top: -40px;
 
+}
+
+.client-card:last-child {
+    margin-right: -90px;
 }
 
 /*  */
