--- a/styles.css
+++ b/styles.css
@@ -9,10 +9,11 @@ body {
     position: absolute;
     top: 0;
     right: 0;
-    width: 1000px;
+    width: 1350px;
     height: auto; /* Maintain the aspect ratio */
     z-index: -1; /* Ensure the image is behind other content */
 }
+
 
 .jez {
     font-weight: 800;
@@ -22,7 +23,7 @@ body {
 
 
 .main-header {
-    margin: 30px 90px;
+    margin: 30px 120px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -53,14 +54,15 @@ body {
     border-radius: 100px;
     background-color: #FB9333;
     color: #FFFFFF;
-    padding: 12px 32px 12px 32px;
+    padding: 12px 40px;
 }
 
 /* dasdasdas */
 .header-page {
     /* width: %; */
     display: flex;
-    margin-top: 70px;
+    margin-top: 110px;
+    margin-bottom: 170px;
 }
 
 .highlight {
@@ -69,6 +71,7 @@ body {
     background-color: #FFF0DC;
     color: #FB9333;
     font-weight: 600;
+    /* margin-bottom: 70px; */
 }
 
 h1 {
@@ -76,12 +79,13 @@ h1 {
     font-weight: 700;
     color: #575757;
     line-height: 1.22;
-    margin-bottom: 25px;
+    margin-bottom: 37px;
+    margin-top: 54px;
 }
 
 .header-page-text {
     width: 600px;
-    margin: 0 90px;
+    margin: 0 120px;
     p {
         font-size: 20px;
         color: #828282;
@@ -93,9 +97,9 @@ h1 {
         border-radius: 100px;
         background-color: #FB9333;
         color: #FFFFFF;
-        padding: 16px 48px;
-        margin-top: 5px;
-        margin-bottom: 60px;
+        padding: 22px 48px;
+        margin-top: 12px;
+        margin-bottom: 110px;
     }
     .main-statistics {
         width: 380px;
@@ -126,15 +130,15 @@ h1 {
     padding: 7px 50px 7px 7px;
     border-radius: 100px;
     position: absolute;
-    bottom: -8%;
-    right: 23%;
+    bottom: -13%;
+    right: 27%;
     justify-content: space-between;
 }
 
 .customer-text {
     display: flex;
     flex-direction: column;
-    gap: 5px;
+    gap: 9px;
 }
 
 .happy-text {
@@ -150,11 +154,11 @@ h1 {
 
 .calories {
     position: absolute;
-    bottom: -19%;
-    right: 5%;
+    bottom: -24%;
+    right: 7%;
     background-color: #FFFFFF;
     border-radius: 28px;
-    padding: 21px;
+    padding: 21px 29px;
     opacity: 0.95;
     span {
         color: #575757;
@@ -178,8 +182,8 @@ h1 {
     }
     
     .progress-bar {
-        height: 59px;
-        width: 8px;
+        height: 70px;
+        width: 9px;
         background: #E7E5F1;
         border-radius: 5px;
         position: relative;
@@ -205,19 +209,21 @@ h1 {
 /*  */
 
 .why-us-page {
-    margin: 0 90px;
+    margin: 0 120px;
+    margin-bottom: 90px;
 }
 .why-us-page .text{
     margin: 0;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    /* text-align: left; */
+    margin-bottom: 70px;
     p {
         font-size: 20px;
         color: #828282;
         line-height: 1.6;
     }
+    
 }
 
 .why-us-page .text h2 {
@@ -232,30 +238,32 @@ h1 {
 .info-cards {
     display: flex;
     justify-content: space-between;
-    gap: 20px;
+    gap: 10px;
     margin-top: 40px;
 }
 
 .info-card {
     background: #fff;
-    border-radius: 12px;
-    padding: 20px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    border-radius: 50px;
+    padding: 30px 40px;
+    border: 1px solid #FFF0DA;
     text-align: left;
     transition: transform 0.3s ease;
-    max-width: 300px;
+    max-width: 310px;
+    display: flex;
+    flex-direction: column;
 }
 
 .info-card:hover {
     transform: translateY(-10px);
-    box-shadow: 0 15px 40px rgba(255, 165, 0, 0.2);
+    box-shadow: 0 50px 40px rgba(255, 165, 0, 0.2);
     transition: transform 0.3s ease;
-
+    border: none;
 }
 
 .info-card img {
     width: 100px;
-    margin-bottom: 15px;
+    margin-bottom: 31px;
 }
 
 .info-card h4 {
@@ -268,36 +276,51 @@ h1 {
 .info-card p {
     font-size: 16px;
     color: #575757;
+    line-height: 1.7;
     /* margin-bottom: 15px; */
 }
 
-.info-card a {
+.learn-more {
+    margin-top: 10px;
     display: flex;
+    justify-content: left;
     align-items: center;
-    justify-content: center;
-    color: #575757;
-    /* font-weight: 600; */
-    text-decoration: none;
     border-radius: 100px;
-    margin: 20px 50px;
-    padding: 13px;
+    /* margin-right: 100px; */
 }
 
-.info-card a img {
-    width: 14px;
-    margin-left: 5px;
-    color: #575757; 
-}
+.learn-more a {
+    color: #575757;
+    text-decoration: none;
+    padding: 0;
+    border-radius: 50px;
+ }
 
-.info-card a:hover {
+.learn-more a:hover {
     color: #FFFFFF;
+    transition: transform 0.7s ease;
     background-color: #FB9333;
-    transition: transform 0.7s ease;
+    img {
+        filter: invert(100%) brightness(1000%);
+    }
+}
+.test{
+    /* width: 150px; */
+    padding: 12px;
+    padding-left: 18px;
+    padding-right: 20px;
+    display: flex;
+    flex-direction: row;
 }
 
-.info-card a img:hover {
-    color: #FFFFFF;
-    transition: transform 0.7s ease;
+
+.learn-more img {
+    fill: blue;
+    margin-top: 0px;
+    margin-bottom: 0;
+    margin-left: 11px;
+    width: 14px;
+    color: inherit; 
 }
 
 
@@ -314,15 +337,10 @@ h1 {
     gap: 20px;
     margin-top: 40px;
     background: linear-gradient(to bottom, #FFF6EA 0%, #FFE8C7 100%);
-    /* padding: 90px; */
-    /* margin: 90px; */
-    /* margin-top: 90px; */
     padding-top: 90px;
-    padding-bottom: 90px;
-}
-
-.reviews-text {
-    margin-left: 90px;
+    padding-bottom: 120px;
+    padding-left: 130px;
+    margin-left: -10px;
 }
 
 .reviews-text h2 {
@@ -340,6 +358,7 @@ h1 {
     margin-top: 0;
     color: #999999;
     font-size: 16px;
+    margin-bottom: 27px;
 }
 .reviews-text .num {
     font-family: Raleway;
@@ -356,32 +375,33 @@ h1 {
 .review-buttons {
     display: flex;
     gap: 20px;
-    margin-top: 20px;
+    margin-top: 27px;
     margin-bottom: 10px;
 }
 
 .left-button {
     border: none;
     background-color: #FFC87A;
-    border-radius: 16px;
+    border-radius: 10px;
 }
 
 .right-button {
     border: none;
     background-color: #FB9333;
-    border-radius: 16px;
+    border-radius: 10px;
 }
 
 .review-buttons button img{
-    width: 24px;
-    color: #FFFFFF;
-    padding: 16px;
+    width: 18px;
+    filter: invert(100%) brightness(1000%);
+    padding: 20px 18px;
 }
 
 .client-cards {
+    margin-left: 70px;
     display: flex;
     justify-content: space-between;
-    gap: 20px;
+    gap: 30px;
     margin-top: 80px;
     overflow: hidden;
 }
@@ -394,6 +414,7 @@ h1 {
 .client-card {
     padding: 0 27px;
     overflow: visible;
+    padding-bottom: 20px;
     h4 {
         margin-top: 100px;
         font-size: 24px;
@@ -404,6 +425,10 @@ h1 {
     time {
         font-size: 14px;
         color: #999999;
+    }
+    p {
+        font-weight: 400;
+        color: #575757
     }
 }
 .client-card img {
@@ -422,8 +447,11 @@ h1 {
 /*  */
 /*  */
 
-.text {
-    margin-left: 90px;
+.menu {
+    margin-top: 120px;
+}
+.menu .text {
+    margin-left: 120px;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
@@ -431,33 +459,34 @@ h1 {
     /* margin-top: 0; */
 }
 
-.text h5 {
+.menu .text h5 {
     font-size: 20px;
     font-weight: 500;
     color: #FB9333;
     margin-bottom: 0;
-    /* text-align: center; */
+    text-align: center;
 }
 
-.text h2 {
+.menu .text h2 {
     margin-top: 10px;
     font-size: 48px;
     font-weight: 600;
     color: #585858;
     text-align: center;
     line-height: 1.26;
+    margin-bottom: 70px;
 }
 
 .food-cards {
     display: flex;
     justify-content: space-between;
-    margin: 0 90px;
+    margin: 0 120px;
 }
 
 .food-card {
     position: relative;
-    height: 450px;
-    width: 27%;
+    height: 510px;
+    width: 28%;
     border-radius: 50px;
     background-size: cover;
     background-position: center;
@@ -478,14 +507,14 @@ h1 {
     font-size: 24px;
     font-weight: 500;
     /* margin-bottom: 20px; */
-    margin-left: 12px;
+    margin-left: 20px;
 }
 
 .food-price {
     font-size: 40px;
     font-weight: 700;
-    margin-left: 12px;
-    margin-bottom: 8px;
+    margin-left: 24px;
+    margin-bottom: 5px;
 }
 
 /*  */
@@ -494,7 +523,9 @@ h1 {
 /*  */
 /*  */
 .subscription {
-    margin: 100px 90px;
+    margin: 0px 120px;
+    margin-top: 220px;
+    margin-bottom: 160px;
     position: relative;
     background-image: url('icons/background_input.svg');
     background-size: cover;
@@ -568,9 +599,11 @@ h1 {
 /*  */
 
 footer {
-    margin: 0px 90px;
+    margin: 0px 120px;
+    margin-bottom: 70px;
     display: flex;
     justify-content: space-between; 
+
 }
 footer .logo {
     display: flex;
